--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -23,6 +23,7 @@ library
                        AOC2017.Day01
                        AOC2017.Types
   build-depends:       base >= 4.7 && < 5
+                     , containers >= 0.5.10.2
   default-language:    Haskell2010
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
 
