--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-9.14
+resolver: nightly-2017-12-01
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
