--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -23,8 +23,10 @@ library
                        AOC2017.Types
   other-modules:       AOC2017.Day01
                        AOC2017.Day02
+                       AOC2017.Day03
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.10.2
+                     , transformers
   default-language:    Haskell2010
   ghc-options:         -Wall
 
