--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -24,9 +24,9 @@ library
   other-modules:       AOC2017.Day01
                        AOC2017.Day02
                        AOC2017.Day03
+                       AOC2017.Day04
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.10.2
-                     , dlist
                      , transformers
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -38,7 +38,11 @@ executable aoc2017
   build-depends:       base
                      , aoc2017
                      , containers
+                     , criterion
+                     , deepseq
                      , filepath
+                     , finite-typelits
+                     , optparse-applicative
   default-language:    Haskell2010
 
 test-suite aoc2017-test
