--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -25,6 +25,7 @@ library
                        AOC2017.Day02
                        AOC2017.Day03
                        AOC2017.Day04
+                       AOC2017.Day05
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.10.2
                      , transformers
