--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -37,6 +37,7 @@ executable aoc2017
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
+                     , ansi-terminal
                      , aoc2017
                      , containers
                      , criterion
@@ -44,6 +45,7 @@ executable aoc2017
                      , filepath
                      , finite-typelits
                      , optparse-applicative
+                     , text
   default-language:    Haskell2010
 
 test-suite aoc2017-test
