--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -26,6 +26,7 @@ library
                        AOC2017.Day03
                        AOC2017.Day04
                        AOC2017.Day05
+                       AOC2017.Day06
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.10.2
                      , transformers
