--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -30,6 +30,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.10.2
                      , transformers
+                     , lens
                      , vector
   default-language:    Haskell2010
   ghc-options:         -Wall
