--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -48,6 +48,7 @@ executable aoc2017
                      , deepseq
                      , filepath
                      , finite-typelits
+                     , haskeline
                      , optparse-applicative
                      , text
                      , transformers
