--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -40,18 +40,20 @@ executable aoc2017
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
+                     , aeson
                      , ansi-terminal
                      , aoc2017
+                     , bytestring
                      , containers
                      , criterion
                      , curl
                      , deepseq
                      , filepath
                      , finite-typelits
-                     , haskeline
                      , optparse-applicative
                      , text
                      , transformers
+                     , yaml
   default-language:    Haskell2010
 
 test-suite aoc2017-test
