--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -32,9 +32,10 @@ library
                        AOC2017.Day09
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.10.2
-                     , megaparsec
-                     , transformers
                      , lens
+                     , megaparsec
+                     , mtl
+                     , transformers
                      , vector
   default-language:    Haskell2010
   ghc-options:         -Wall
