--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -30,11 +30,14 @@ library
                        AOC2017.Day07
                        AOC2017.Day08
                        AOC2017.Day09
+                       AOC2017.Day10
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.10.2
                      , lens
                      , megaparsec
                      , mtl
+                     , split
+                     , text
                      , transformers
                      , vector
   default-language:    Haskell2010
