--- a/stack.yaml
+++ b/stack.yaml
@@ -37,6 +37,15 @@ resolver: nightly-2017-12-01
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
+- location:
+    git: https://github.com/mstksg/finite-typelits.git
+    commit: 20fef64f32490c93264792532c4ab07b2800e160
+  extra-dep: true
+- location:
+    git: https://github.com/mstksg/vector-sized.git
+    commit: 782fd4679c2eeab990b70b61432d474e8a77eab5
+  extra-dep: true
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
