--- a/stack.yaml
+++ b/stack.yaml
@@ -48,7 +48,8 @@ packages:
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- grid-7.8.9
 
 # Override default flag values for local packages and extra-deps
 flags: {}
