--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -32,6 +32,7 @@ library
                        AOC2017.Day09
                        AOC2017.Day10
                        AOC2017.Day11
+                       AOC2017.Day12
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.10.2
                      , finite-typelits
