--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -49,6 +49,11 @@ library
                      , vector
                      , vector-sized
   default-language:    Haskell2010
+  default-extensions:  ViewPatterns
+                       RecordWildCards
+                       LambdaCase
+                       TupleSections
+                       ScopedTypeVariables
   ghc-options:         -Wall
 
 executable aoc2017
