--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -34,6 +34,8 @@ library
                        AOC2017.Day11
                        AOC2017.Day12
   build-depends:       base >= 4.7 && < 5
+                     , aeson
+                     , bytestring
                      , containers >= 0.5.10.2
                      , curl
                      , deepseq
@@ -48,12 +50,16 @@ library
                      , transformers
                      , vector
                      , vector-sized
+                     , yaml
   default-language:    Haskell2010
   default-extensions:  ViewPatterns
-                       RecordWildCards
+                       DeriveFoldable
+                       DeriveFunctor
+                       DeriveTraversable
                        LambdaCase
-                       TupleSections
+                       RecordWildCards
                        ScopedTypeVariables
+                       TupleSections
   ghc-options:         -Wall
 
 executable aoc2017
@@ -61,17 +67,14 @@ executable aoc2017
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
-                     , aeson
                      , ansi-terminal
                      , aoc2017
-                     , bytestring
                      , containers
                      , criterion
                      , deepseq
                      , finite-typelits
                      , optparse-applicative
                      , text
-                     , yaml
   default-language:    Haskell2010
 
 test-suite aoc2017-test
