--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -33,6 +33,7 @@ library
                        AOC2017.Day10
                        AOC2017.Day11
                        AOC2017.Day12
+                       AOC2017.Day13
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , bytestring
