--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -47,6 +47,7 @@ library
                      , filepath
                      , finite-typelits
                      , grid
+                     , hmatrix
                      , lens
                      , megaparsec
                      , mtl
@@ -57,10 +58,13 @@ library
                      , vector-sized
                      , yaml
   default-language:    Haskell2010
-  default-extensions:  DeriveFoldable
+  default-extensions:  BangPatterns
+                       DataKinds
+                       DeriveFoldable
                        DeriveFunctor
                        DeriveTraversable
                        LambdaCase
+                       MultiWayIf
                        NumDecimals
                        RecordWildCards
                        ScopedTypeVariables
