--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -38,6 +38,7 @@ library
                        AOC2017.Day14
                        AOC2017.Day15
                        AOC2017.Day16
+                       AOC2017.Day17
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , bytestring
