cleaning up day 17

--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -63,6 +63,7 @@ library
                        DeriveFunctor
                        DeriveTraversable
                        LambdaCase
+                       MonadComprehensions
                        MultiWayIf
                        NumDecimals
                        RecordWildCards
