--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -40,6 +40,7 @@ library
                        AOC2017.Day16
                        AOC2017.Day17
                        AOC2017.Day18
+                       AOC2017.Day19
   build-depends:       base >= 4.7 && < 5
                      , MonadPrompt
                      , aeson
