--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -56,6 +56,7 @@ library
                      , megaparsec
                      , mmorph
                      , monad-control
+                     , monad-loops
                      , mtl
                      , split
                      , text
