day 21 using hmatrix

--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -55,6 +55,7 @@ library
                      , filepath
                      , finite-typelits
                      , grid
+                     , hmatrix
                      , lens
                      , linear
                      , megaparsec
