prep for day 23

--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -81,8 +81,10 @@ library
                        MonadComprehensions
                        MultiWayIf
                        NumDecimals
+                       RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
+                       TemplateHaskell
                        TupleSections
                        TypeApplications
                        ViewPatterns
