day 23 program simplifier

--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -66,6 +66,7 @@ library
                      , monad-control
                      , monad-loops
                      , mtl
+                     , pretty-simple
                      , split
                      , text
                      , transformers
