--- a/aoc2017.cabal
+++ b/aoc2017.cabal
@@ -22,8 +22,10 @@ library
   exposed-modules:     AOC2017
                        AOC2017.Types
                        AOC2017.Util
-                       AOC2017.Util.Tape
+                       AOC2017.Util.Accum
                        AOC2017.Util.Disjoints
+                       AOC2017.Util.Prompt
+                       AOC2017.Util.Tape
   other-modules:       AOC2017.Day01
                        AOC2017.Day02
                        AOC2017.Day03
