--- a/stack.yaml
+++ b/stack.yaml
@@ -47,6 +47,8 @@ packages:
 extra-deps:
 - grid-7.8.10
 - transformers-0.5.5.0
+- taggy-0.2.1
+- taggy-lens-0.1.2
 
 # Override default flag values for local packages and extra-deps
 flags: {}
